applications/e2e-monitor/nginx-ingressclass.yaml
# ingress-nginx version 2.0.3 doesn't seem to include an IngressClass with the helm chart.
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
