applications/e2e-monitor/e2e-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: e2e-monitor
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: e2e-monitor
  name: e2e-monitor
  namespace: default
spec:
  rules:
  - host: e2e.eck.elastic.dev
    http:
      paths:
      - backend:
          serviceName: e2e-monitor-kb-http
          servicePort: 5601
        path: /
        pathType: Prefix
  - host: es.eck.elastic.dev
    http:
      paths:
      - backend:
          serviceName: e2e-monitor-es-http
          servicePort: 9200
        path: /
        pathType: Prefix
  - host: apm.eck.elastic.dev
    http:
      paths:
      - backend:
          serviceName: e2e-monitor-apm-http
          servicePort: 8200
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - e2e.eck.elastic.dev
    - es.eck.elastic.dev
    - apm.eck.elastic.dev
    secretName: e2e-monitor-https-cert
